welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:48: error: unclosed string literal
  "def back (){
  ^PictureMono2:55: error: unclosed string literal
  }"
   ^PictureMono2:48: error: unclosed string literal
  "def back (){
  ^PictureMono2:48: error: illegal start of statement
  "def back (){
  ^PictureMono2:55: error: unclosed string literal
  }"
   ^PictureMono2:55: error: ';' expected but something found.
  }"
   ^PictureMono2:78: error: Unmatched closing brace '}' ignored here
}
^